fix align issue

--- a/assets/js/blocks/mini-cart/mini-cart-contents/editor.scss
+++ b/assets/js/blocks/mini-cart/mini-cart-contents/editor.scss
@@ -55,6 +55,7 @@
 	}
 
 	.wp-block-woocommerce-empty-mini-cart-contents-block {
+		min-height: 100vh;
 		overflow-y: unset;
 		padding: 0;
 
@@ -63,10 +64,6 @@
 			max-height: 100vh;
 			overflow-y: auto;
 			padding: $gap-largest $gap $gap;
-
-			> .block-editor-block-list__layout {
-				min-height: 100vh;
-			}
 		}
 
 		// Temporary fix after the appender button was positioned absolute
